tests/programs/a1/local/valid/NoFieldsOrConstructorsExample.java
public interface NoFieldsOrConstructorsExample {
    void interfaceMethod();
}
