tests/programs/a1/local/invalid/multiple_variables_per_declaration.java
public class multiple_variables_per_declaration {
  public A() {}
  public void m() {
    int x = 1, y = 2, z = 3;
  }
}